[package]
name = "claude-input"
version = "0.1.0"
edition = "2021"
description = "Japanese IME-friendly input helper for Claude Code with global hotkey support"
authors = ["tishi"]

[dependencies]
iced = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
arboard = "3"
enigo = "0.2"
sysinfo = "0.32"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp"] }

[profile.release]
lto = true
strip = true
