[package]
name = "moji-bridge"
version = "0.1.0"
edition = "2021"
description = "Japanese IME Input Helper for Claude Code on Windows"
authors = ["tishi"]
license = "MIT"
repository = "https://github.com/chitsii/moji-bridge"
readme = "README.md"
keywords = ["ime", "japanese", "claude-code", "windows"]
categories = ["command-line-utilities"]

[dependencies]
iced = { version = "0.14", default-features = false, features = [
    "tiny-skia",
    "image",
    "thread-pool",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
arboard = "3"
enigo = "0.2"
sysinfo = "0.32"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
strip = true
